--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           Keep track of your snippets
         </h3>
 
-        <p class="section-content mb-24">
+        <p class="section-content mb-24 text-xl">
           Clipboard instantly stores any item you copy in the cloud, meaning you can access your snippets immediately on all your devices.
           Our Mac and iOS apps will help you organize everything.
         </p>
@@ -90,7 +90,7 @@
     <section id="access">
       <div class="section-container my-20">
         <h3>Access Clipboard Anywhere</h3>
-        <p class="section-content mb-24">
+        <p class="section-content mb-24 text-xl">
           Whether you're on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.
         </p>
 
@@ -102,7 +102,7 @@
     <section id="supercharge">
       <div class="section-container my-20">
         <h3>Supercharge your workflow</h3>
-        <p class="section-content mb-16">
+        <p class="section-content mb-16 text-xl">
           We've got the tools to boost your productivity.
         </p>
         <!-- Items Container -->
@@ -142,5 +142,83 @@
         </div>
       </div>
     </section>
+
+    <!-- References Section -->
+    <section id="references">
+      <div class="flex flex-col items-center justify-between max-w-6xl px-10 mx-auto space-y-16 my-44 md:flex-row md:space-y-0">
+        <img src="./public/images/logo-google.png">
+        <img src="./public/images/logo-ibm.png">
+        <img src="./public/images/logo-microsoft.png">
+        <img src="./public/images/logo-hp.png">
+        <img src="./public/images/logo-vector-graphics.png">
+      </div>
+    </section>
+
+    <!-- Bottom CTA Section -->
+    <section id="bottom">
+      <div class="section-container my-20">
+        <h3>
+          Clipboard for iOS and MacOS
+        </h3>
+        <p class="section-content mb-10 text-xl">
+          Available for free on the App Store. Download for Mac or iOS sync with iCloud and you're ready to start adding yo your clipboard.
+        </p>
+
+        <!-- Button Container -->
+        <div class="button-container">
+          <a href="#" class="p-4 px-8 rounded-full shadow-lg bg-strongCyan duration-200 hover:opacity-80">Download for iOS</a>
+          <a href="#" class="p-4 px-8 rounded-full shadow-lg bg-lightBlue duration-200 hover:opacity-80">Download for Mac</a>
+        </div>
+      </div>
+    </section>
+
+    <footer class="bg-gray-50">
+      <div class="section-container">
+        <div class="flex flex-col items-center justify-between md:flex-row">
+          <!-- Image -->
+          <img src="public/images/logo.svg" alt="" class="scale-50">
+
+          <!-- Container for Menus & Social -->
+          <div class="flex flex-col items-center justify-between flex-1 mb-10 space-y-6 md:flex-row md:mb-0 md:space-y-0 text-grayishBlue">
+            <!-- Menus -->
+            <div class="flex flex-col space-y-4 md:flex-row md:ml-24 md:space-x-24 md:space-y-0">
+              <!-- Menu 1 -->
+              <div class="flex flex-col space-y-4 text-center md:text-left">
+                <div>
+                  <a href="#" class="hover:text-strongCyan">FAQs</a>
+                </div>
+                <div>
+                  <a href="#" class="hover:text-strongCyan">Contact Us</a>
+                </div>
+              </div>
+
+              <!-- Menu 2 -->
+              <div class="flex flex-col space-y-4 text-center md:text-left">
+                <div>
+                  <a href="#" class="hover:text-strongCyan">Privacy Policy</a>
+                </div>
+                <div>
+                  <a href="#" class="hover:text-strongCyan">Press Kit</a>
+                </div>
+              </div>
+
+              <!-- Menu 3 -->
+              <div class="flex flex-col space-y-4 text-center md:text-left">
+                <div>
+                  <a href="#" class="hover:text-strongCyan">Install Guide</a>
+                </div>
+              </div>
+            </div>
+
+            <!-- Social Icons -->
+            <div class="flex justify-between w-32 py-1">
+              <a href="#"><img src="public/images/icon-facebook.svg" alt="" class="duration-200 ficon"></a>
+              <a href="#"><img src="public/images/icon-twitter.svg" alt="" class="duration-200 ficon"></a>
+              <a href="#"><img src="public/images/icon-instagram.svg" alt="" class="duration-200 ficon"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
