--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Hero Section -->
     <section id="hero">
       <div class="section-container mb-40 pt-16">
-        <img src="./public/images/logo.svg" alt="logo" class="mx-auto my-16">
+        <img src="/images/logo.svg" alt="logo" class="mx-auto my-16">
 
         <h3>
           A history of everything you copy
@@ -53,7 +53,7 @@
         <div class="relative flex flex-col md:flex-row md:space-x-32">
           <!-- Image -->
           <div class="md:w-1/2">
-            <img src="./public/images/image-computer.png" alt="image-computer" class="md:absolute top-0 right-[50%]">
+            <img src="/images/image-computer.png" alt="image-computer" class="md:absolute top-0 right-[50%]">
           </div>
           
           <!-- Items Container -->
@@ -94,7 +94,7 @@
           Whether you're on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.
         </p>
 
-        <img src="./public/images/image-devices.png" alt="image-devices" class="mx-auto">
+        <img src="/images/image-devices.png" alt="image-devices" class="mx-auto">
       </div>
     </section>
 
@@ -109,7 +109,7 @@
         <div class="flex flex-col items-center justify-between space-y-16 md:flex-row md:space-y-0 md:space-x-12">
           <!-- Item 1 -->
           <div class="flex flex-col items-center space-y-5">
-            <img src="./public/images/icon-blacklist.svg" alt="icon-blacklist" class="mb-6">
+            <img src="/images/icon-blacklist.svg" alt="icon-blacklist" class="mb-6">
             <h5>
               Create Blacklists
             </h5>
@@ -120,7 +120,7 @@
 
           <!-- Item 2 -->
           <div class="flex flex-col items-center space-y-5">
-            <img src="./public/images/icon-text.svg" alt="icon-text" class="mb-6">
+            <img src="/images/icon-text.svg" alt="icon-text" class="mb-6">
             <h5>
               Plain Text Snippets
             </h5>
@@ -131,7 +131,7 @@
 
           <!-- Item 3 -->
           <div class="flex flex-col items-center space-y-5">
-            <img src="./public/images/icon-preview.svg" alt="icon-preview" class="mb-6">
+            <img src="/images/icon-preview.svg" alt="icon-preview" class="mb-6">
             <h5>
               Sneak Preview
             </h5>
@@ -146,11 +146,11 @@
     <!-- References Section -->
     <section id="references">
       <div class="flex flex-col items-center justify-between max-w-6xl px-10 mx-auto space-y-16 my-44 md:flex-row md:space-y-0">
-        <img src="./public/images/logo-google.png">
-        <img src="./public/images/logo-ibm.png">
-        <img src="./public/images/logo-microsoft.png">
-        <img src="./public/images/logo-hp.png">
-        <img src="./public/images/logo-vector-graphics.png">
+        <img src="/images/logo-google.png">
+        <img src="/images/logo-ibm.png">
+        <img src="/images/logo-microsoft.png">
+        <img src="/images/logo-hp.png">
+        <img src="/images/logo-vector-graphics.png">
       </div>
     </section>
 
@@ -176,7 +176,7 @@
       <div class="section-container">
         <div class="flex flex-col items-center justify-between md:flex-row">
           <!-- Image -->
-          <img src="public/images/logo.svg" alt="" class="scale-50">
+          <img src/images/logo.svg" alt="" class="scale-50">
 
           <!-- Container for Menus & Social -->
           <div class="flex flex-col items-center justify-between flex-1 mb-10 space-y-6 md:flex-row md:mb-0 md:space-y-0 text-grayishBlue">
@@ -212,9 +212,9 @@
 
             <!-- Social Icons -->
             <div class="flex justify-between w-32 py-1">
-              <a href="#"><img src="public/images/icon-facebook.svg" alt="" class="duration-200 ficon"></a>
-              <a href="#"><img src="public/images/icon-twitter.svg" alt="" class="duration-200 ficon"></a>
-              <a href="#"><img src="public/images/icon-instagram.svg" alt="" class="duration-200 ficon"></a>
+              <a href="#"><img src/images/icon-facebook.svg" alt="" class="duration-200 ficon"></a>
+              <a href="#"><img src/images/icon-twitter.svg" alt="" class="duration-200 ficon"></a>
+              <a href="#"><img src/images/icon-instagram.svg" alt="" class="duration-200 ficon"></a>
             </div>
           </div>
         </div>
