--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             <!-- Item 3 -->
             <div>
-              <h5">Completely History</h5>
+              <h5>Completely History</h5>
               <p class="max-w-md text-grayishBlue">
                 Retrieve any snippets from the first moment you started using the app.
               </p>
